Update sidebar js to account for javascript overrides, update custom and index to ensure collapse buttons spans icons

--- a/book/theme/css/custom.css
+++ b/book/theme/css/custom.css
@@ -327,8 +327,7 @@ body.sidebar-hidden #sidebar-toggle {
   }
 
   button.collapse-sidebar {
-    display: flex;
-    justify-content: space-between;
+    display: block;
     position: absolute;
     left: 0;
     top: 0;
@@ -337,20 +336,22 @@ body.sidebar-hidden #sidebar-toggle {
     border: none;
     cursor: pointer;
     padding: 14px 20px;
+
     &:hover {
       background-color: var(--Elements-Twilight-5-80);
     }
-    .close-icon {
-      content: var(--close-icon);
-      height: 14px;
-      width: 14px;
-      display: none;
-    }
-    .double-arrow-icon {
+
+    &::before {
       content: var(--double-arrow-icon);
+      display: block;
       transform: rotate(180deg);
       height: 18px;
       width: 18px;
+    }
+    @media (max-width: 576px) {
+      &::before {
+        display: none;
+      }
     }
   }
 
@@ -420,18 +421,14 @@ body.sidebar-hidden #sidebar-toggle {
     background-color: var(--Elements-Twilight-5-80);
   }
 
-  .toggle-icon {
+  &::before {
+    content: var(--double-arrow-icon);
     display: block;
     position: absolute;
     top: 86px;
-    left: 16px;
-
-    &::before {
-      content: var(--double-arrow-icon);
-      margin-left: 8px;
-      width: 18px;
-      height: 18px;
-    }
+    left: 24px;
+    width: 18px;
+    height: 18px;
   }
 }
 
@@ -973,11 +970,12 @@ mark {
     &:hover {
       background-color: transparent !important;
     }
-    .close-icon {
-      display: block !important;
-    }
-    .double-arrow-icon {
-      display: none;
+
+    &::after {
+      content: var(--close-icon);
+      transform: none;
+      height: 14px;
+      width: 14px;
     }
   }
 }
